--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -13,10 +13,10 @@ tasks:
     command: pip install -r requirements.txt && pip install -r sidecar-requirements.txt && pip install -r ui-requirements.txt
   - name: Crear imagenes Docker
     init: > 
-      docker build . -f aeroalpes.Dockerfile -t aeroalpes/flask &&
-      docker build . -f adaptador.Dockerfile -t aeroalpes/adaptador &&
-      docker build . -f notificacion.Dockerfile -t aeroalpes/notificacion &&
-      docker build . -f ui.Dockerfile -t aeroalpes/ui &&
+      docker build . -f entregas_de_los_alpes.Dockerfile -t entregas_de_los_alpes/flask &&
+      docker build . -f adaptador.Dockerfile -t entregas_de_los_alpes/adaptador &&
+      docker build . -f notificacion.Dockerfile -t entregas_de_los_alpes/notificacion &&
+      docker build . -f ui.Dockerfile -t entregas_de_los_alpes/ui &&
       gp sync-done images
   - name: Crear folder para datos, clientes, conectores y asigna permisos
     init: > 
@@ -40,4 +40,3 @@ ports:
     onOpen: ignore
   - port: 6650
     onOpen: ignore
-
