--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,10 +1,13 @@
 [project]
-name = "aeroalpes"
+name = "entregasDeLosAlpes"
 version = "1.0.0"
 authors = [
-  { name="Juan Urrego", email="js.urrego110@uniandes.edu.co" },
+  { name="Andrés Lugo", email="a.lugos@uniandes.edu.co" },
+  { name="Luisa Fuentes", email="l.fuentesl@uniandes.edu.co" },
+  { name="Julian Mora", email="j.morav@uniandes.edu.co" },
+  { name="Maria Paula Gonzalez", email="m.gonzaleze@uniandes.edu.co" },
 ]
-description = "Proyecto de ejemplo de AeroAlpes"
+description = "Proyecto de ejemplo de entregasDeLosAlpes"
 readme = "README.md"
 requires-python = ">=3.10"
 
