--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -109,9 +109,9 @@ services:
       - SYS_NICE
     restart: always
     environment:
-      - MYSQL_DATABASE=reservas
+      - MYSQL_DATABASE=ordenes
       - MYSQL_ROOT_PASSWORD=adminadmin
-    profiles: ["aeroalpes", "db"]
+    profiles: ["entregasDeLosAlpes", "db"]
     networks:
       - pulsar
     ports:
@@ -119,12 +119,12 @@ services:
     volumes:
       - ./data/mysql:/var/lib/mysql
       - ./init.sql:/docker-entrypoint-initdb.d/init.sql  
-  # Servicios de AeroAlpes
-  aeroalpes:
-    container_name: aeroalpes
-    hostname: aeroalpes
-    image: aeroalpes/flask 
-    profiles: ["aeroalpes", "monolito"]
+  # Servicios de entregasDeLosAlpes
+  entregasDeLosAlpes:
+    container_name: entregasDeLosAlpes
+    hostname: entregasDeLosAlpes
+    image: entregasDeLosAlpes/flask 
+    profiles: ["entregasDeLosAlpes", "monolito"]
     networks:
       - sidecar
       - pulsar
@@ -134,21 +134,21 @@ services:
       - broker
       - db
     environment:
-      - AEROALPES_ADDRESS=aeroalpes
+      - ENTREGAS_ADDRESS=entregasDeLosAlpes
       - PULSAR_ADDRESS=broker
     ports:
       - "5000:5000"
   adaptador:
-    image: "aeroalpes/adaptador"
-    profiles: ["aeroalpes", "monolito"]
+    image: "entregasDeLosAlpes/adaptador"
+    profiles: ["entregasDeLosAlpes", "monolito"]
     container_name: adaptador
     hostname: adaptador
     depends_on:
-      - aeroalpes
+      - entregasDeLosAlpes
     networks:
       - sidecar
     environment:
-      - AEROALPES_ADDRESS=aeroalpes
+      - ENTREGAS_ADDRESS=entregasDeLosAlpes
       - PULSAR_ADDRESS=broker
     ports:
       - "50051:50051"
@@ -157,13 +157,13 @@ services:
   notificacion:
     container_name: notificacion
     hostname: notificacion
-    image: aeroalpes/notificacion 
-    profiles: ["aeroalpes", "notificacion"]
+    image: entregasDeLosAlpes/notificacion 
+    profiles: ["entregasDeLosAlpes", "notificacion"]
     depends_on:
-      - aeroalpes
+      - entregasDeLosAlpes
       - broker
     environment:
-      - AEROALPES_ADDRESS=aeroalpes
+      - ENTREGAS_ADDRESS=entregasDeLosAlpes
       - PULSAR_ADDRESS=broker
     networks:
       - pulsar
@@ -171,13 +171,13 @@ services:
   ui:
     container_name: ui
     hostname: ui
-    image: aeroalpes/ui 
-    profiles: ["aeroalpes", "ui"]
+    image: entregasDeLosAlpes/ui 
+    profiles: ["entregasDeLosAlpes", "ui"]
     depends_on:
-      - aeroalpes
+      - entregasDeLosAlpes
       - broker
     environment:
-      - AEROALPES_ADDRESS=aeroalpes
+      - ENTREGAS_ADDRESS=entregasDeLosAlpes
       - PULSAR_ADDRESS=broker
     networks:
       - pulsar
