--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -10,7 +10,7 @@ tasks:
       gp sync-done bundle
   - name: Instalar dependencias
     init: gp sync-await bundle
-    command: pip install -r requirements.txt && pip install -r sidecar-requirements.txt && pip install -r ui-requirements.txt
+    command: pip install -r requirements.txt && pip install -r sidecar-requirements.txt && pip install -r bff-requirements.txt && pip install -r cliente-requirements.txt  
   - name: Crear imagenes Docker
     init: > 
       docker build . -f entregas_de_los_alpes.Dockerfile -t entregas_de_los_alpes/flask &&
